<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_high_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.ljmu.cwk2.HighScreen"
    android:background="@drawable/high_sc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usern"
        android:id="@+id/userListHeader"
        android:layout_marginStart="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/scoreListHeader"
        android:layout_marginStart="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:id="@+id/gamesPlayedListHeader"
        android:layout_marginStart="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:id="@+id/winsListHeader"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/gamesPlayedListHeader"
        android:layout_toEndOf="@+id/gamesPlayedListHeader"
        android:layout_marginStart="11dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/rankList"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/userListHeader"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/userList"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/rankList"
        android:layout_alignStart="@+id/userListHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/scoreList"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/userList"
        android:layout_alignStart="@+id/scoreListHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/gamesPlayedList"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/scoreList"
        android:layout_alignStart="@+id/gamesPlayedListHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/winsList"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/gamesPlayedList"
        android:layout_alignStart="@+id/winsListHeader" />

</RelativeLayout>
