<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.ljmu.cwk2.LoginScreen">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:id="@+id/textViewLoginUsername" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:id="@+id/textViewLoginPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextLoginUsername"
        android:layout_alignBaseline="@+id/textViewLoginUsername"
        android:layout_alignBottom="@+id/textViewLoginUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:imeOptions="actionDone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextLoginPassword"
        android:layout_alignBaseline="@+id/textViewLoginPassword"
        android:layout_alignBottom="@+id/textViewLoginPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:imeOptions="actionDone" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="loginUser" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/loginAs"
        android:background="@android:drawable/btn_dropdown" />
</RelativeLayout>
