<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/playlow"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.ljmu.cwk2.PlayScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/currentScore"
        android:textSize="@dimen/glow_text"
        android:textColor="#FF69B4"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="8"/>

    <Button
        android:text="@string/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rollButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rollButton"
        android:layout_marginStart="13dp"
        android:layout_marginTop="78dp"
        android:id="@+id/currentPlayer"
        android:textColor="#FF69B4"
        />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:id="@+id/winningPlayer"
        android:textColor="#FF69B4"
        />


    <TextView
        android:text="@string/currentPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/currentPlayer"
        android:layout_alignEnd="@+id/currentPlayer"
        android:layout_marginBottom="23dp"
        android:textColor="#FF69B4"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/p1"
        android:id="@+id/diceViewOne"
        android:layout_marginTop="130dp"
        android:layout_marginStart="70dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/p2"
        android:id="@+id/diceViewTwo"
        android:layout_marginTop="170dp"
        android:layout_marginStart="200dp" />

    <ImageView
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:id="@+id/flashBang"
        android:alpha="0"
        app:srcCompat="@drawable/bang"
        android:backgroundTint="@color/colorFlashBang"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp" />

</RelativeLayout>
